2006-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/file.c: remove useless test.

	* test/spawn.c: new g_spawn_async_with_pipes test.
	* src/glib.h: Modified file.
	* src/gspawn.c: implemented g_spawn_async_with_pipes. Needs fine tuning.

2006-08-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO: Modified file.
	* test/tests.h:
	* test/pattern.c:
	* test/dir.c:
	* test/Makefile.am:
	* src/Makefile.am:
	* src/glib.h:
	* src/gdir.c:
	* src/gfile.c: implemented g_dir_*, unix version.

2006-08-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/glib.h:
	* test/Makefile.am: Modified file.
	* test/tests.h:
	* src/Makefile.am: Modified file.
	* test/pattern.c:
	* src/gpattern.c: implemented the 3 pattern matching functions used.

	* test/ptrarray.c: fix the compare function to work with qsort.

	* test/file.c:
	* test/path.c:
	* src/gspawn.c:
	* src/gpath.c: made valgrind happy.

2006-08-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/file.c:
	* src/glib.h:
	* src/gfile.c:  implemented g_file_test. Changed the default mask to
	.XXXXXX. Add tests.

2006-08-26  Raja R Harinath  <rharinath@novell.com>

	* src/sort.frag.h (digit): Declare here based on externally
	provided typedef 'list_node'.
	(MAX_DIGITS): Use 'sizeof (list_node)'.
	* src/gslist.c (list_node): Declare instead of 'digit'.
	* src/glist.c: Likewise.

	* test/slist.c (verify_sort): Verify the length of the list too.
	(test_slist_sort): Free the correct list.
	* test/list.c: Likewise.
	* src/sort.frag.h (MAX_DIGITS): Rename from N_DIGITS.
	(combine_sort): Change 'max_pos' argument to more natural
	'n_digits'.
	(increment): Likewise.  Use 'n_digits' to avoid reading at an
	offset that hasn't been initialized.
	(do_sort): Remove memset.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO:
	* test/file.c:
	* src/glib.h:
	* src/gfile.c: implement g_file_open_tmp.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TODO:
	* src/glib.h:
	* src/gdate.c: New file.